--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.5",
+    "firebase-tools": "^10.1.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
